--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
                                         <div class="classynav">
                                             <div class="search-wrapper">
                                                 <form role="search" method="get" class="search-form" action="https://durgapurtubes.offerfunda.net/">
-                                                        <input type="search" class="search-field" placeholder="Search …" value="" name="s" tabindex="-1">
-                                                                    <button class="search-submit ast-search-submit" aria-label="Search Submit" fdprocessedid="guzkj5">
-                                                                <span hidden="">Search</span>
-                                                                <i><span class="ast-icon icon-search"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="-888 480 142 142" enable-background="new -888 480 142 142" xml:space="preserve">
-                                                                <path d="M-787.4,568.7h-6.3l-2.4-2.4c7.9-8.7,12.6-20.5,12.6-33.1c0-28.4-22.9-51.3-51.3-51.3  c-28.4,0-51.3,22.9-51.3,51.3c0,28.4,22.9,51.3,51.3,51.3c12.6,0,24.4-4.7,33.1-12.6l2.4,2.4v6.3l39.4,39.4l11.8-11.8L-787.4,568.7  L-787.4,568.7z M-834.7,568.7c-19.7,0-35.5-15.8-35.5-35.5c0-19.7,15.8-35.5,35.5-35.5c19.7,0,35.5,15.8,35.5,35.5  C-799.3,553-815,568.7-834.7,568.7L-834.7,568.7z"></path>
+                                                    <input type="search" class="search-field" placeholder="Search …" value="" name="s" tabindex="-1">
+                                                    <button class="search-submit ast-search-submit" aria-label="Search Submit" fdprocessedid="guzkj5">
+                                                        <span hidden="">Search</span>
+                                                        <i><span class="ast-icon icon-search"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="-888 480 142 142" enable-background="new -888 480 142 142" xml:space="preserve">
+                                                                    <path d="M-787.4,568.7h-6.3l-2.4-2.4c7.9-8.7,12.6-20.5,12.6-33.1c0-28.4-22.9-51.3-51.3-51.3  c-28.4,0-51.3,22.9-51.3,51.3c0,28.4,22.9,51.3,51.3,51.3c12.6,0,24.4-4.7,33.1-12.6l2.4,2.4v6.3l39.4,39.4l11.8-11.8L-787.4,568.7  L-787.4,568.7z M-834.7,568.7c-19.7,0-35.5-15.8-35.5-35.5c0-19.7,15.8-35.5,35.5-35.5c19.7,0,35.5,15.8,35.5,35.5  C-799.3,553-815,568.7-834.7,568.7L-834.7,568.7z"></path>
                                                                 </svg></span></i>
-                                                            </button>
-                                                    </form>
+                                                    </button>
+                                                </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
                                                 <a href="get-quote.html" class="btn1">
@@ -162,7 +162,7 @@
                                                         </a>
                                                     </div>
                                                 </div>
-                                            </div> 
+                                            </div>
                                         </div>
                                         <!-- Nav End -->
                                     </div>
@@ -203,9 +203,9 @@
                                         <div class="banner-content-borderbox">
                                             <h1 class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</h1>
                                             <div class="banner-button">
-                                                <a href="#" class="btn1">
+                                                <a href="contact-us.html" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
-                                                    Know More
+                                                    GET QUOTE
                                                 </a>
                                             </div>
                                         </div>
@@ -225,9 +225,9 @@
                                         <div class="banner-content-borderbox">
                                             <div class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</div>
                                             <div class="banner-button">
-                                                <a href="#" class="btn1">
+                                                <a href="contact-us.html" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
-                                                    Know More
+                                                    GET QUOTE
                                                 </a>
                                             </div>
                                         </div>
@@ -247,9 +247,9 @@
                                         <div class="banner-content-borderbox">
                                             <div class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</div>
                                             <div class="banner-button">
-                                                <a href="#" class="btn1">
+                                                <a href="contact-us.html" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
-                                                    Know More
+                                                    GET QUOTE
                                                 </a>
                                             </div>
                                         </div>
@@ -269,9 +269,9 @@
                                         <div class="banner-content-borderbox">
                                             <div class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</div>
                                             <div class="banner-button">
-                                                <a href="#" class="btn1">
+                                                <a href="contact-us.html" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
-                                                    Know More
+                                                    GET QUOTE
                                                 </a>
                                             </div>
                                         </div>
@@ -291,9 +291,9 @@
                                         <div class="banner-content-borderbox">
                                             <div class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</div>
                                             <div class="banner-button">
-                                                <a href="#" class="btn1">
+                                                <a href="contact-us.html" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
-                                                    Know More
+                                                    GET QUOTE
                                                 </a>
                                             </div>
                                         </div>
@@ -400,7 +400,7 @@
                                 </div>
                             </div>
                             <div class="readmore-button mt-50">
-                                <a href="about-us" class="btn1">
+                                <a href="about.html" class="btn1">
                                     Read More
                                 </a>
                             </div>
@@ -425,7 +425,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="videobox-con">
                         <div class="video-box set-bg" data-setbg="images/banner-3.webp" style="background-image:url(images/banner-3.webp);">
-                            <a href="videos/Movie001-1.mp4.crdownload" class="video-popup">
+                            <a href="videos/Movie001-1.mp4" class="video-popup">
                                 <i class="fa fa-play" aria-hidden="true"></i>
                             </a>
                         </div>
@@ -524,7 +524,7 @@
                                     Durgapur Tubes Pvt Ltd is a leading manufacturer of MS water pipes made of mild steel. With a strong commitment to quality and durability, our MS water pipes are designed to meet the industry standards. We offer a wide range of sizes to cater water supply needs. Our products are known for their performance.
                                 </p>
                                 <div class="readmore-button text-center mt-30 mb-2">
-                                    <a href="#" class="btn1">
+                                    <a href="products.html" class="btn1">
                                         know More
                                     </a>
                                 </div>
@@ -546,7 +546,7 @@
                                     Our oxygen lancing tubes are meticulously designed to excel in cutting, piercing, and heating applications. Engineered to withstand high temperatures and pressures, our oxygen lancing tubes are trusted by industries worldwide for their reliability and durability, ensuring efficient oxygen lancing operations
                                 </p>
                                 <div class="readmore-button text-center mt-30 mb-2">
-                                    <a href="#" class="btn1">
+                                    <a href="products.html" class="btn1">
                                         know More
                                     </a>
                                 </div>
@@ -568,7 +568,7 @@
                                     Our high-quality Mild Steel pipes are engineered for durability and reliability, ideal for diverse industrial applications. With precision manufacturing and adherence to stringent quality standards, our Mild steel pipes ensure optimal performance and long-lasting service. Know more about our products.
                                 </p>
                                 <div class="readmore-button text-center mt-30 mb-2">
-                                    <a href="#" class="btn1">
+                                    <a href="products.html" class="btn1">
                                         know More
                                     </a>
                                 </div>
@@ -636,7 +636,7 @@
                                     </li>
                                 </ul>
                                 <div class="readmore-button mt-50">
-                                    <a href="about-us" class="btn1">
+                                    <a href="products.html" class="btn1">
                                         Know More
                                     </a>
                                 </div>
@@ -1059,7 +1059,7 @@
                                     </div>
                                     <div class="contact_contentbox">
                                         <p class="contact-no">
-                                            Call US – +91-9233308158,
+                                            Call US – +91-9233308158
                                         </p>
                                     </div>
                                 </div>
@@ -1071,13 +1071,14 @@
                                     </div>
                                     <div class="contact_contentbox">
                                         <p class="email-address">
-                                            marketing@durgapurtubes.com, durgapurtubes@rediffmail.com
+                                            marketing@durgapurtubes.com<br>
+                                            durgapurtubes@rediffmail.com
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="contact-button mt-20">
-                                <a href="contact" class="btn1">
+                                <a href="get-quote.html" class="btn1">
                                     Get a Quote
                                 </a>
                             </div>
@@ -1171,57 +1172,57 @@
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="about">
+                                <a href="about.html">
                                     About
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="products">
+                                <a href="products.html">
                                     Products
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="information">
+                                <a href="info.html">
                                     Information
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="clients">
+                                <a href="clients.html">
                                     Clients
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="contact-us">
+                                <a href="contact-us.html">
                                     Contact Us
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="careers">
+                                <a href="careers.html">
                                     Careers
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="faq">
+                                <a href="faq.html">
                                     FAQ
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="lc-format">
+                                <a href="lc-format.html">
                                     LC Format
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="quality">
+                                <a href="quality.html">
                                     Quality
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="links">
+                                <a href="links.html">
                                     Links
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="gallery">
+                                <a href="gallery.html">
                                     Gallery
                                 </a>
                             </li>
@@ -1235,17 +1236,17 @@
                         </div>
                         <ul class="quick-link">
                             <li class="ql">
-                                <a href="oxygen-lancing-tube">
+                                <a href="products.html">
                                     Oxygen Lancing Tube
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="water-pipes">
+                                <a href="products.html">
                                     Water Pipes
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="ms-steel-pipes">
+                                <a href="products.html">
                                     MS Steel Pipes
                                 </a>
                             </li>
@@ -1255,17 +1256,17 @@
                         </div>
                         <ul class="quick-link">
                             <li class="ql">
-                                <a href="is-10577">
+                                <a href="is-10577.html">
                                     IS 10577
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="en-10255">
+                                <a href="en-10255.html">
                                     EN 10255
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="bs-1387">
+                                <a href="bs-1387.html">
                                     BS 1387
                                 </a>
                             </li>
@@ -1295,7 +1296,7 @@
                                 <div class="contact-detailsbox">
                                     <div class="contact_contentbox">
                                         <p class="email-address">
-                                            marketing@durgapurtubes.com,<br>
+                                            marketing@durgapurtubes.com<br>
                                             durgapurtubes@rediffmail.com
                                         </p>
                                     </div>
@@ -1484,12 +1485,12 @@
     </script>
 
 
+
     <!--Video Popup-->
     <script>
         $('.video-popup').magnificPopup({
-            type: 'a'
+            type: 'iframe'
         });
-
     </script>
 
 
