--- a/quality.html
+++ b/quality.html
@@ -10,13 +10,10 @@
     <link href="css/menu-nav.css" rel="stylesheet">
     <link href="css/media.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 
@@ -111,14 +108,14 @@
                                         <div class="classynav">
                                             <div class="search-wrapper">
                                                 <form role="search" method="get" class="search-form" action="https://durgapurtubes.offerfunda.net/">
-                                                        <input type="search" class="search-field" placeholder="Search …" value="" name="s" tabindex="-1">
-                                                                    <button class="search-submit ast-search-submit" aria-label="Search Submit" fdprocessedid="guzkj5">
-                                                                <span hidden="">Search</span>
-                                                                <i><span class="ast-icon icon-search"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="-888 480 142 142" enable-background="new -888 480 142 142" xml:space="preserve">
-                                                                <path d="M-787.4,568.7h-6.3l-2.4-2.4c7.9-8.7,12.6-20.5,12.6-33.1c0-28.4-22.9-51.3-51.3-51.3  c-28.4,0-51.3,22.9-51.3,51.3c0,28.4,22.9,51.3,51.3,51.3c12.6,0,24.4-4.7,33.1-12.6l2.4,2.4v6.3l39.4,39.4l11.8-11.8L-787.4,568.7  L-787.4,568.7z M-834.7,568.7c-19.7,0-35.5-15.8-35.5-35.5c0-19.7,15.8-35.5,35.5-35.5c19.7,0,35.5,15.8,35.5,35.5  C-799.3,553-815,568.7-834.7,568.7L-834.7,568.7z"></path>
+                                                    <input type="search" class="search-field" placeholder="Search …" value="" name="s" tabindex="-1">
+                                                    <button class="search-submit ast-search-submit" aria-label="Search Submit" fdprocessedid="guzkj5">
+                                                        <span hidden="">Search</span>
+                                                        <i><span class="ast-icon icon-search"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="-888 480 142 142" enable-background="new -888 480 142 142" xml:space="preserve">
+                                                                    <path d="M-787.4,568.7h-6.3l-2.4-2.4c7.9-8.7,12.6-20.5,12.6-33.1c0-28.4-22.9-51.3-51.3-51.3  c-28.4,0-51.3,22.9-51.3,51.3c0,28.4,22.9,51.3,51.3,51.3c12.6,0,24.4-4.7,33.1-12.6l2.4,2.4v6.3l39.4,39.4l11.8-11.8L-787.4,568.7  L-787.4,568.7z M-834.7,568.7c-19.7,0-35.5-15.8-35.5-35.5c0-19.7,15.8-35.5,35.5-35.5c19.7,0,35.5,15.8,35.5,35.5  C-799.3,553-815,568.7-834.7,568.7L-834.7,568.7z"></path>
                                                                 </svg></span></i>
-                                                            </button>
-                                                    </form>
+                                                    </button>
+                                                </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
                                                 <a href="get-quote.html" class="btn1">
@@ -165,7 +162,7 @@
                                                         </a>
                                                     </div>
                                                 </div>
-                                            </div> 
+                                            </div>
                                         </div>
                                         <!-- Nav End -->
                                     </div>
@@ -277,28 +274,34 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 mb-mt-30 sm-mt-30 md-mt-30">
-                <div class="product_con">
-                    <div class="owl-carousel owl-theme" id="slider1">
-                        <div class="item">
-                            <div class="imagebox">
-                                <img src="images/about-page-sec3-img1.webp" alt="">
+            <div class="row justify-content-center">
+                <div class="col-lg-11 col-md-12 col-sm-12 mb-mt-30 sm-mt-30 md-mt-30">
+                    <div class="product_con">
+                        <div class="owl-carousel owl-theme" id="slider1">
+                            <div class="item">
+                                <div class="imagebox">
+                                    <img src="images/2.webp" alt="">
+                                </div>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="imagebox">
-                                <img src="images/about-page-sec3-img1.webp" alt="">
+                            <div class="item">
+                                <div class="imagebox">
+                                    <img src="images/3.webp" alt="">
+                                </div>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="imagebox">
-                                <img src="images/about-page-sec3-img1.webp" alt="">
+                            <div class="item">
+                                <div class="imagebox">
+                                    <img src="images/4.webp" alt="">
+                                </div>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="imagebox">
-                                <img src="images/about-page-sec3-img1.webp" alt="">
+                            <div class="item">
+                                <div class="imagebox">
+                                    <img src="images/5.webp" alt="">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="imagebox">
+                                    <img src="images/6.webp" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -331,24 +334,17 @@
                             <div class="social_icons">
                                 <a href="https://durgapurtubes.offerfunda.net/" class="icons" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                        <path
-                                            d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z">
-                                        </path>
+                                        <path d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"></path>
                                     </svg>
                                 </a>
                                 <a href="https://durgapurtubes.offerfunda.net/" class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                        <path
-                                            d="M224,202.66A53.34,53.34,0,1,0,277.36,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.41-30.41c-21-8.29-71-6.43-94.3-6.43s-73.25-1.93-94.31,6.43a54,54,0,0,0-30.41,30.41c-8.28,21-6.43,71.05-6.43,94.33S91,329.26,99.32,350.33a54,54,0,0,0,30.41,30.41c21,8.29,71,6.43,94.31,6.43s73.24,1.93,94.3-6.43a54,54,0,0,0,30.41-30.41c8.35-21,6.43-71.05,6.43-94.33S357.1,182.74,348.75,161.67ZM224,338a82,82,0,1,1,82-82A81.9,81.9,0,0,1,224,338Zm85.38-148.3a19.14,19.14,0,1,1,19.13-19.14A19.1,19.1,0,0,1,309.42,189.74ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32ZM382.88,322c-1.29,25.63-7.14,48.34-25.85,67s-41.4,24.63-67,25.85c-26.41,1.49-105.59,1.49-132,0-25.63-1.29-48.26-7.15-67-25.85s-24.63-41.42-25.85-67c-1.49-26.42-1.49-105.61,0-132,1.29-25.63,7.07-48.34,25.85-67s41.47-24.56,67-25.78c26.41-1.49,105.59-1.49,132,0,25.63,1.29,48.33,7.15,67,25.85s24.63,41.42,25.85,67.05C384.37,216.44,384.37,295.56,382.88,322Z">
-                                        </path>
+                                        <path d="M224,202.66A53.34,53.34,0,1,0,277.36,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.41-30.41c-21-8.29-71-6.43-94.3-6.43s-73.25-1.93-94.31,6.43a54,54,0,0,0-30.41,30.41c-8.28,21-6.43,71.05-6.43,94.33S91,329.26,99.32,350.33a54,54,0,0,0,30.41,30.41c21,8.29,71,6.43,94.31,6.43s73.24,1.93,94.3-6.43a54,54,0,0,0,30.41-30.41c8.35-21,6.43-71.05,6.43-94.33S357.1,182.74,348.75,161.67ZM224,338a82,82,0,1,1,82-82A81.9,81.9,0,0,1,224,338Zm85.38-148.3a19.14,19.14,0,1,1,19.13-19.14A19.1,19.1,0,0,1,309.42,189.74ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32ZM382.88,322c-1.29,25.63-7.14,48.34-25.85,67s-41.4,24.63-67,25.85c-26.41,1.49-105.59,1.49-132,0-25.63-1.29-48.26-7.15-67-25.85s-24.63-41.42-25.85-67c-1.49-26.42-1.49-105.61,0-132,1.29-25.63,7.07-48.34,25.85-67s41.47-24.56,67-25.78c26.41-1.49,105.59-1.49,132,0,25.63,1.29,48.33,7.15,67,25.85s24.63,41.42,25.85,67.05C384.37,216.44,384.37,295.56,382.88,322Z"></path>
                                     </svg>
                                 </a>
-                                <a href="https://durgapurtubes.offerfunda.net/" class="icons" target="_blank"
-                                    class="icons">
+                                <a href="https://durgapurtubes.offerfunda.net/" class="icons" target="_blank" class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                        <path
-                                            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
-                                        </path>
+                                        <path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path>
                                     </svg>
                                 </a>
                             </div>
@@ -368,57 +364,57 @@
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="about">
+                                <a href="about.html">
                                     About
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="products">
+                                <a href="products.html">
                                     Products
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="information">
+                                <a href="info.html">
                                     Information
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="clients">
+                                <a href="clients.html">
                                     Clients
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="contact-us">
+                                <a href="contact-us.html">
                                     Contact Us
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="careers">
+                                <a href="careers.html">
                                     Careers
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="faq">
+                                <a href="faq.html">
                                     FAQ
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="lc-format">
+                                <a href="lc-format.html">
                                     LC Format
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="quality">
+                                <a href="quality.html">
                                     Quality
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="links">
+                                <a href="links.html">
                                     Links
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="gallery">
+                                <a href="gallery.html">
                                     Gallery
                                 </a>
                             </li>
@@ -432,17 +428,17 @@
                         </div>
                         <ul class="quick-link">
                             <li class="ql">
-                                <a href="oxygen-lancing-tube">
+                                <a href="products.html">
                                     Oxygen Lancing Tube
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="water-pipes">
+                                <a href="products.html">
                                     Water Pipes
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="ms-steel-pipes">
+                                <a href="products.html">
                                     MS Steel Pipes
                                 </a>
                             </li>
@@ -452,17 +448,17 @@
                         </div>
                         <ul class="quick-link">
                             <li class="ql">
-                                <a href="is-10577">
+                                <a href="is-10577.html">
                                     IS 10577
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="en-10255">
+                                <a href="en-10255.html">
                                     EN 10255
                                 </a>
                             </li>
                             <li class="ql">
-                                <a href="bs-1387">
+                                <a href="bs-1387.html">
                                     BS 1387
                                 </a>
                             </li>
@@ -492,7 +488,7 @@
                                 <div class="contact-detailsbox">
                                     <div class="contact_contentbox">
                                         <p class="email-address">
-                                            marketing@durgapurtubes.com,<br>
+                                            marketing@durgapurtubes.com<br>
                                             durgapurtubes@rediffmail.com
                                         </p>
                                     </div>
@@ -523,9 +519,7 @@
 
     <!--Whatsapp button start-->
     <div class="whatsapp-container">
-        <div class="phone-call"><a target="_blank" href="https://wa.me/<%= $g->{whatsapp_no} %>"><img
-                    src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png"
-                    width="50" alt="Order On Whatsapp" title="Order On Whatsapp"></a></div>
+        <div class="phone-call"><a target="_blank" href="https://wa.me/<%= $g->{whatsapp_no} %>"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Order On Whatsapp" title="Order On Whatsapp"></a></div>
     </div>
     <!--Whatsapp button end-->
 
@@ -548,7 +542,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
             var slider1 = $("#slider1");
             var slider2 = $("#slider2");
             var slider3 = $("#slider3");
@@ -668,9 +662,9 @@
 
     <script>
         // Load More Produts CSS 
-        $(document).ready(function () {
+        $(document).ready(function() {
             $(".content").slice(0, 6).show();
-            $("#loadMore").on("click", function (e) {
+            $("#loadMore").on("click", function(e) {
                 e.preventDefault();
                 $(".content:hidden").slice(0, 3).slideDown();
                 if ($(".content:hidden").length == 0) {
