new changes in 2nd january 24

--- a/bs-1387.html
+++ b/bs-1387.html
@@ -115,7 +115,7 @@
                                                     </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
-                                                <a href="get-quote.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     Get A Quote
                                                 </a>
                                             </div>
@@ -171,7 +171,7 @@
 
                     <div class="header-rightconbox">
                         <div class="get-in-touch">
-                            <a href="contact-us.html" class="btn1">
+                            <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                 Get A Quote
                             </a>
                         </div>
@@ -673,7 +673,7 @@
     <!--Whatsapp button start-->
     <div class="whatsapp-container">
         <div class="phone-call">
-            <a target="_blank" href="https://wa.me/<%= $g->{whatsapp_no} %>"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Order On Whatsapp" title="Order On Whatsapp" /></a>
+            <a target="_blank" href="https://wa.me/9233308151"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Chat on WhatsApp" title="Chat on WhatsApp"></a>
         </div>
     </div>
     <!--Whatsapp button end-->
