--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                                 </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
-                                                <a href="get-quote.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     Get A Quote
                                                 </a>
                                             </div>
@@ -174,7 +174,7 @@
 
                     <div class="header-rightconbox">
                         <div class="get-in-touch">
-                            <a href="get-quote.html" class="btn1">
+                            <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                 Get A Quote
                             </a>
                         </div>
@@ -203,7 +203,7 @@
                                         <div class="banner-content-borderbox">
                                             <h1 class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</h1>
                                             <div class="banner-button">
-                                                <a href="contact-us.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
                                                     GET QUOTE
                                                 </a>
@@ -225,7 +225,7 @@
                                         <div class="banner-content-borderbox">
                                             <div class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</div>
                                             <div class="banner-button">
-                                                <a href="contact-us.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
                                                     GET QUOTE
                                                 </a>
@@ -247,7 +247,7 @@
                                         <div class="banner-content-borderbox">
                                             <div class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</div>
                                             <div class="banner-button">
-                                                <a href="contact-us.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
                                                     GET QUOTE
                                                 </a>
@@ -269,7 +269,7 @@
                                         <div class="banner-content-borderbox">
                                             <div class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</div>
                                             <div class="banner-button">
-                                                <a href="contact-us.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
                                                     GET QUOTE
                                                 </a>
@@ -291,7 +291,7 @@
                                         <div class="banner-content-borderbox">
                                             <div class="banner-heading2">Manufacturer &amp; Supplier of <br> Steel Tubes &amp; Pipes</div>
                                             <div class="banner-button">
-                                                <a href="contact-us.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     <i aria-hidden="true" class="fas fa-mail-bulk"></i>
                                                     GET QUOTE
                                                 </a>
@@ -1327,7 +1327,9 @@
 
     <!--Whatsapp button start-->
     <div class="whatsapp-container">
-        <div class="phone-call"><a target="_blank" href="https://wa.me/<%= $g->{whatsapp_no} %>"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Order On Whatsapp" title="Order On Whatsapp"></a></div>
+        <div class="phone-call">
+            <a target="_blank" href="https://wa.me/9233308151"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Chat on WhatsApp" title="Chat on WhatsApp"></a>
+        </div>
     </div>
     <!--Whatsapp button end-->
 
