--- a/quality.html
+++ b/quality.html
@@ -118,7 +118,7 @@
                                                 </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
-                                                <a href="get-quote.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     Get A Quote
                                                 </a>
                                             </div>
@@ -174,7 +174,7 @@
 
                     <div class="header-rightconbox">
                         <div class="get-in-touch">
-                            <a href="get-quote.html" class="btn1">
+                            <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                 Get A Quote
                             </a>
                         </div>
@@ -275,7 +275,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-lg-11 col-md-12 col-sm-12 mb-mt-30 sm-mt-30 md-mt-30">
+                <div class="col-lg-11 col-md-12 col-sm-12">
                     <div class="product_con">
                         <div class="owl-carousel owl-theme" id="slider1">
                             <div class="item">
@@ -519,7 +519,9 @@
 
     <!--Whatsapp button start-->
     <div class="whatsapp-container">
-        <div class="phone-call"><a target="_blank" href="https://wa.me/<%= $g->{whatsapp_no} %>"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Order On Whatsapp" title="Order On Whatsapp"></a></div>
+        <div class="phone-call">
+            <a target="_blank" href="https://wa.me/9233308151"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Chat on WhatsApp" title="Chat on WhatsApp"></a>
+        </div>
     </div>
     <!--Whatsapp button end-->
 
