--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                                                     </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
-                                                <a href="get-quote.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     Get A Quote
                                                 </a>
                                             </div>
@@ -177,7 +177,7 @@
 
                     <div class="header-rightconbox">
                         <div class="get-in-touch">
-                            <a href="get-quote.html" class="btn1">
+                            <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                 Get A Quote
                             </a>
                         </div>
@@ -237,7 +237,7 @@
                                 our office operations, contributing to our overall success and growth
                             </p>
                             <div class="readmore-button mt-50">
-                                <a href="contact-us" class="btn1">
+                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                     Get Quote
                                 </a>
                             </div>
@@ -617,9 +617,9 @@
 
     <!--Whatsapp button start-->
     <div class="whatsapp-container">
-        <div class="phone-call"><a target="_blank" href="https://wa.me/<%= $g->{whatsapp_no} %>"><img
-                    src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png"
-                    width="50" alt="Order On Whatsapp" title="Order On Whatsapp"></a></div>
+        <div class="phone-call">
+            <a target="_blank" href="https://wa.me/9233308151"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Chat on WhatsApp" title="Chat on WhatsApp"></a>
+        </div>
     </div>
     <!--Whatsapp button end-->
 
