--- a/en-10255.html
+++ b/en-10255.html
@@ -819,7 +819,7 @@
     <!--Whatsapp button start-->
     <div class="whatsapp-container">
         <div class="phone-call">
-            <a target="_blank" href="https://wa.me/<%= $g->{whatsapp_no} %>"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Order On Whatsapp" title="Order On Whatsapp" /></a>
+            <a target="_blank" href="https://wa.me/9233308151"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Chat on WhatsApp" title="Chat on WhatsApp"></a>
         </div>
     </div>
     <!--Whatsapp button end-->
