--- a/products.html
+++ b/products.html
@@ -116,7 +116,7 @@
                                                 </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
-                                                <a href="get-quote.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     Get A Quote
                                                 </a>
                                             </div>
@@ -172,7 +172,7 @@
 
                     <div class="header-rightconbox">
                         <div class="get-in-touch">
-                            <a href="get-quote.html" class="btn1">
+                            <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                 Get A Quote
                             </a>
                         </div>
@@ -244,7 +244,7 @@
                             </div>
                         </a>
                         <div class="card-wraper-box-content">
-                            <a href="10">
+                            <a href="#10">
                                 <h4 class="box-title">10mm NB MS Lancing Tubes as per IS - 10577/82</h4>
                             </a>
                             <p class="description">The pipe or tubing can be customized to the customer's desired length, ranging from 3 meters to 12 meters, and features threads on both ends, a socket on one end, and a protective plastic cap on the other</p>
@@ -1378,7 +1378,7 @@
     <!--Whatsapp button start-->
     <div class="whatsapp-container">
         <div class="phone-call">
-            <a target="_blank" href="https://wa.me/<%= $g->{whatsapp_no} %>"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Order On Whatsapp" title="Order On Whatsapp" /></a>
+            <a target="_blank" href="https://wa.me/9233308151"><img src="https://cdn2.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-circle-512.png" width="50" alt="Chat on WhatsApp" title="Chat on WhatsApp"></a>
         </div>
     </div>
     <!--Whatsapp button end-->
