--- a/bs-1387.html
+++ b/bs-1387.html
@@ -212,9 +212,9 @@
                     <div class="aboutbox content-con section-title">
                         <div class="left-contentbox">
                             <div class="left-contentbox-details">
-                                <h2 class="page_title" style="padding-left:60px; font-size: 35px; color:orangered;"><u><strong>BS 1387</strong></u></h2>
+                                <h2 class="page_title" style="font-size: 35px; color:orangered;"><u><strong>BS 1387</strong></u></h2>
                                 <div class="left-contentbox-details">
-                                    <form class="float_form" style="padding-left: 60px; padding-right:50px">
+                                    <form class="float_form">
                                         <div style="font-size:20px; margin-top: 30px;"><b>BS 1387 'Light'</b></div>
                                         <p>-- Dimensions and masses are in accordance with ISO 65 'Light Series II'</p>
 
@@ -262,7 +262,7 @@
                         <p style="color: black ; font-weight: bold;">*Note: The Socket Length shown in Table meets the requirments of the ISO 50, but the minimum length B has been increased to allow for the chamfer at the ends of the sockets and is based on B= 2L + 3.5P </p>
                     </div>
                     <div class="left-contentbox-details">
-                        <form class="float_form" style="padding-left: 60px; padding-right:50px">
+                        <form class="float_form">
                             <br>
                             <div style="font-size:20px"><b>Tubes and Sockets</b></div>
                             <br>
