--- a/careers.html
+++ b/careers.html
@@ -119,7 +119,7 @@
                                                     </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
-                                                <a href="get-quote.html" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     Get A Quote
                                                 </a>
                                             </div>
@@ -175,7 +175,7 @@
 
                     <div class="header-rightconbox">
                         <div class="get-in-touch">
-                            <a href="get-quote.html" class="btn1">
+                            <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                 Get A Quote
                             </a>
                         </div>
