--- a/get-quote.html
+++ b/get-quote.html
@@ -116,7 +116,7 @@
                                                 </form>
                                             </div>
                                             <div class="get-a-quote-mob-button">
-                                                <a href="contact-us" class="btn1">
+                                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                                     Get A Quote
                                                 </a>
                                             </div>
@@ -172,7 +172,7 @@
 
                     <div class="header-rightconbox">
                         <div class="get-in-touch">
-                            <a href="contact-us.html" class="btn1">
+                            <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                 Get A Quote
                             </a>
                         </div>
@@ -295,8 +295,9 @@
                                     <label>Update Quantity And Other Details</label>
                                     <textarea class="form-control" name="message" id="message" rows="5"     placeholder="Write Message"></textarea>
                                 </div>
-                                <div class="banner-form-submit-button mt-30">
-                                    <button type="submit" name="submit" id="submit" class="btn1">Send</button>
+                                <div class="banner-form-submit-button">
+                                    <a href="mailto:marketing@durgapurtubes.com" id="submit" class="btn1">Send</a>
+                                    <!-- <button type="submit" name="submit" id="submit" class="btn1">Send</button> -->
                                 </div>
                             </div>
                             
