--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@
                                         </div>
                                     </div><!-- .wpforms-field-container -->
                                     <div class="banner-form-submit-button">
-                                        <button type="submit" name="submit" id="submit" class="btn1">Send</button>
+                                        <a href="mailto:marketing@durgapurtubes.com" id="submit" class="btn1">Send</a>
+                                        <!-- <button type="submit" name="submit" id="submit" class="btn1">Send</button> -->
                                     </div>
                                 </form>
                             </div>
@@ -1078,7 +1079,7 @@
                                 </div>
                             </div>
                             <div class="contact-button mt-20">
-                                <a href="get-quote.html" class="btn1">
+                                <a href="mailto:marketing@durgapurtubes.com" class="btn1">
                                     Get a Quote
                                 </a>
                             </div>
