--- a/products.html
+++ b/products.html
@@ -209,7 +209,7 @@
     <section class="lcformatepage_section1">
         <div class="container ast-container">
             <div class="row justify-content-between">
-                <div class="col-lg-12 col-md-12 col-sm-12 mt-30">
+                <div class="col-lg-12 col-md-12 col-sm-12 mt-30 mb-mt-0 sm-mt-0 md-mt-0">
                     <div class="aboutbox content-con section-title">
                         <div class="left-contentbox">
                             <div class="left-contentbox-details text-center">
@@ -380,7 +380,8 @@
                                         </div>
                                     </div><!-- .wpforms-field-container -->
                                     <div class="banner-form-submit-button">
-                                        <button type="submit" name="submit" id="submit" class="btn1">Send</button>
+                                        <a href="mailto:marketing@durgapurtubes.com" id="submit" class="btn1">Send</a>
+                                        <!-- <button type="submit" name="submit" id="submit" class="btn1">Send</button> -->
                                     </div>
                                 </form>
                             </div>
